[gd_scene load_steps=22 format=2]

[ext_resource path="res://interface/PersonUI.gd" type="Script" id=1]
[ext_resource path="res://interface/ConsoleBG.png" type="Texture" id=2]
[ext_resource path="res://interface/Font/VerdanaFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://interface/Font/VerdanaFont_Small.tres" type="DynamicFont" id=4]
[ext_resource path="res://interface/ConsoleBorder.png" type="Texture" id=5]
[ext_resource path="res://interface/scanlines.png" type="Texture" id=6]

[sub_resource type="VisualShaderNodeInput" id=1]
input_name = "time"

[sub_resource type="VisualShaderNodeScalarFunc" id=2]
function = 17

[sub_resource type="VisualShaderNodeScalarOp" id=3]
operator = 6

[sub_resource type="VisualShaderNodeScalarOp" id=4]
operator = 7

[sub_resource type="VisualShaderNodeInput" id=5]
input_name = "uv"

[sub_resource type="VisualShaderNodeVectorDecompose" id=6]

[sub_resource type="VisualShaderNodeScalarOp" id=7]
output_port_for_preview = 0
operator = 1

[sub_resource type="VisualShaderNodeScalarOp" id=14]
output_port_for_preview = 0
default_input_values = [ 0, 0.0, 1, 10.0 ]
operator = 5

[sub_resource type="VisualShaderNodeScalarConstant" id=15]
constant = 0.21

[sub_resource type="VisualShaderNodeScalarOp" id=16]
operator = 2

[sub_resource type="VisualShaderNodeTexture" id=18]
output_port_for_preview = 0
texture = ExtResource( 6 )
texture_type = 1

[sub_resource type="VisualShaderNodeScalarConstant" id=19]
constant = 0.24

[sub_resource type="VisualShaderNodeScalarOp" id=20]
operator = 2

[sub_resource type="VisualShader" id=11]
code = "shader_type canvas_item;
uniform sampler2D tex_frg_41 : hint_albedo;


void vertex() {
// Output:0

}

void fragment() {
// Scalar:38
	float n_out38p0;
	n_out38p0 = 0.210000;

// Input:25
	float n_out25p0;
	n_out25p0 = TIME;

// ScalarOp:39
	float n_out39p0;
	n_out39p0 = n_out38p0 * n_out25p0;

// ScalarFunc:26
	float n_out26p0;
	n_out26p0 = fract(n_out39p0);

// Input:29
	vec3 n_out29p0;
	n_out29p0 = vec3(UV,0.0);

// VectorDecompose:31
	float n_out31p0;
	float n_out31p1;
	float n_out31p2;
	n_out31p0 = n_out29p0.x;
	n_out31p1 = n_out29p0.y;
	n_out31p2 = n_out29p0.z;

// ScalarOp:27
	float n_out27p0;
	n_out27p0 = max( n_out26p0 , n_out31p1 );

// ScalarOp:28
	float n_out28p0;
	n_out28p0 = min( n_out26p0 , n_out31p1 );

// ScalarOp:32
	float n_out32p0;
	n_out32p0 = n_out27p0 - n_out28p0;

// Texture:41
	vec3 n_out41p0;
	float n_out41p1;
	vec4 tex_frg_41_read = texture( tex_frg_41 , vec3(n_out32p0).xy );
	n_out41p0 = tex_frg_41_read.rgb;
	n_out41p1 = tex_frg_41_read.a;

// Scalar:42
	float n_out42p0;
	n_out42p0 = 0.240000;

// ScalarOp:43
	float n_out43p0;
	n_out43p0 = n_out42p0 * n_out41p1;

// Output:0
	COLOR.rgb = n_out41p0;
	COLOR.a = n_out43p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( 410.757, -556.79 )
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 1280, -140 )
nodes/fragment/25/node = SubResource( 1 )
nodes/fragment/25/position = Vector2( -380, -240 )
nodes/fragment/26/node = SubResource( 2 )
nodes/fragment/26/position = Vector2( -80, 20 )
nodes/fragment/27/node = SubResource( 3 )
nodes/fragment/27/position = Vector2( 140, -100 )
nodes/fragment/28/node = SubResource( 4 )
nodes/fragment/28/position = Vector2( 140, 80 )
nodes/fragment/29/node = SubResource( 5 )
nodes/fragment/29/position = Vector2( -440, 220 )
nodes/fragment/31/node = SubResource( 6 )
nodes/fragment/31/position = Vector2( -280, 220 )
nodes/fragment/32/node = SubResource( 7 )
nodes/fragment/32/position = Vector2( 320, -120 )
nodes/fragment/37/node = SubResource( 14 )
nodes/fragment/37/position = Vector2( 760, -480 )
nodes/fragment/38/node = SubResource( 15 )
nodes/fragment/38/position = Vector2( -380, -60 )
nodes/fragment/39/node = SubResource( 16 )
nodes/fragment/39/position = Vector2( -120, -100 )
nodes/fragment/41/node = SubResource( 18 )
nodes/fragment/41/position = Vector2( 340, -480 )
nodes/fragment/42/node = SubResource( 19 )
nodes/fragment/42/position = Vector2( 1060, -460 )
nodes/fragment/43/node = SubResource( 20 )
nodes/fragment/43/position = Vector2( 1120, -340 )
nodes/fragment/connections = PoolIntArray( 31, 1, 27, 1, 26, 0, 27, 0, 26, 0, 28, 0, 31, 1, 28, 1, 27, 0, 32, 0, 28, 0, 32, 1, 29, 0, 31, 0, 38, 0, 39, 0, 25, 0, 39, 1, 39, 0, 26, 0, 41, 0, 0, 0, 42, 0, 43, 0, 41, 1, 43, 1, 43, 0, 0, 1, 32, 0, 41, 0 )

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 11 )

[node name="PersonUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 27.0, 32.0, 39.0, 44.0, 51.0, 56.0 ],
"_edit_vertical_guides_": [ 43.0 ]
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 222.0
margin_bottom = 96.0
texture = ExtResource( 2 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="NameLabel" type="Label" parent="NinePatchRect"]
margin_left = 34.0
margin_right = 126.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.192157, 0.705882, 0.368627, 1 )
text = "Unknown"
valign = 1

[node name="CareerLabel" type="Label" parent="NinePatchRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -180.0
margin_top = 27.0
margin_right = -120.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.192157, 0.705882, 0.368627, 1 )
text = "Carrer: Programmer"
valign = 1

[node name="DetailsLabel" type="Label" parent="NinePatchRect"]
margin_left = 42.0
margin_top = 16.0
margin_right = 93.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.192157, 0.705882, 0.368627, 1 )
text = "Female, 20"
valign = 1

[node name="FamilyLabel" type="Label" parent="NinePatchRect"]
margin_left = 42.0
margin_top = 40.0
margin_right = 172.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.192157, 0.705882, 0.368627, 1 )
text = "Family: NO DATA"
valign = 1

[node name="HoursLabel" type="Label" parent="NinePatchRect"]
margin_left = 42.0
margin_top = 52.0
margin_right = 198.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.192157, 0.705882, 0.368627, 1 )
text = "Hours Worked: 200"
valign = 1

[node name="DebtLabel" type="Label" parent="NinePatchRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -17.0
margin_right = -4.0
margin_bottom = -3.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.827451, 0.101961, 0.188235, 1 )
text = "DEBT: 1000$"
align = 2
valign = 1

[node name="BorderRight" type="TextureRect" parent="NinePatchRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -32.0
margin_bottom = 32.0
texture = ExtResource( 5 )

[node name="BorderLeft" type="TextureRect" parent="NinePatchRect"]
margin_right = 32.0
margin_bottom = 32.0
rect_scale = Vector2( -1, 1 )
rect_pivot_offset = Vector2( 16, 0 )
texture = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="NinePatchRect"]
material = SubResource( 12 )
margin_left = 2.0
margin_top = 2.0
margin_right = 220.0
margin_bottom = 94.0

